--- a/src/pages/[year]/[month]/[day]/[...slug].astro
+++ b/src/pages/[year]/[month]/[day]/[...slug].astro
@@ -26,7 +26,7 @@ const { Content } = await post.render();
 ---
 
 <PageLayout title={post.data.title} description={post.data.description}>
-  <article class={vstack({ gap: '4', px: '4', maxW: 'lg', mx: 'auto' })}>
+  <article class={vstack({ gap: '4', px: '4', maxW: 'lg', mx: 'auto', hyphens: 'auto' })}>
     <header>
       {
         post.data.cover && (
